# one-pass_morphology

./: CMakeLists.txt  README.md
data/: time_comparison.txt
sources/: main.cpp  one_pass_morphology.cpp  one_pass_morphology.h
test/: CMakeLists.txt
test/sources/: test.cpp
